# potts

./: AppPotts.cpp  AppSDL.cpp  AppSDL.h  CMakeLists.txt  LICENSE  README.md  VirtualInput.cpp  VirtualInput.h  global.h
data/: average_color_y.frag  average_spins_x.frag  quad.vert
